Add Ziggurat method for exponential values Code Cleanup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ INCLUDE_DIRECTORIES(BEFORE "${CMAKE_CURRENT_BINARY_DIR}/include")
 
 ADD_EXECUTABLE(jak
   jak.cpp
+  rexp.cpp
   xorshift64.h
   aliastable.h
 )
